--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="primary">#E28E41</color>
+    <color name="text_white">#FFFFFF</color>
+    <color name="text_black">#333333</color>
+    <color name="gray">#606060</color>
+    <color name="light_gray">#EEEEEE</color>
+    <color name="light_red">#EF1E1E</color>
 </resources>
