--- a/app/src/main/res/layout/activity_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_onboarding_screen.xml
@@ -33,6 +33,7 @@
         app:layout_constraintTop_toBottomOf="@id/bottom_guideline" />
 
     <TextView
+        android:id="@+id/btn_skip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
