--- a/app/src/main/res/layout/activity_screening.xml
+++ b/app/src/main/res/layout/activity_screening.xml
@@ -17,7 +17,7 @@
             android:id="@+id/title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Screening"
+            android:text="@string/screening"
             android:textSize="21sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -28,7 +28,7 @@
             android:id="@+id/subtitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Let's find out your daily calories needs"
+            android:text="@string/let_s_find_out_your_daily_calories_needs"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title" />
@@ -122,7 +122,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="Gender"
+            android:text="@string/gender"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -143,7 +143,7 @@
                 android:layout_marginVertical="0dp"
                 android:layout_marginStart="8dp"
                 android:buttonTint="@color/primary"
-                android:text="Male"
+                android:text="@string/male"
                 android:textSize="14sp" />
 
             <RadioButton
@@ -152,7 +152,7 @@
                 android:layout_marginVertical="0dp"
                 android:layout_marginStart="8dp"
                 android:buttonTint="@color/primary"
-                android:text="Female"
+                android:text="@string/female"
                 android:textSize="14sp" />
         </RadioGroup>
 
@@ -161,7 +161,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="Activity Type"
+            android:text="@string/activity_type"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -182,7 +182,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@drawable/rounded_btn_bg"
-            android:text="Submit"
+            android:text="@string/submit"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/rv_activity" />
