--- a/app/src/main/res/layout/loading_indicator.xml
+++ b/app/src/main/res/layout/loading_indicator.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/dialog_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Please Wait"
+                android:text="@string/please_wait"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="parent"
