Fix camera doesn't launch on Android 11 API 30

--- a/app/src/main/res/layout/activity_detector.xml
+++ b/app/src/main/res/layout/activity_detector.xml
@@ -30,7 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:contentDescription="@string/food_image"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
