Add food history

--- a/app/src/main/res/layout/activity_screening.xml
+++ b/app/src/main/res/layout/activity_screening.xml
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:hint="@string/weigth"
+            android:hint="@string/weight"
             app:boxCornerRadiusBottomEnd="8dp"
             app:boxCornerRadiusBottomStart="8dp"
             app:boxCornerRadiusTopEnd="8dp"
@@ -148,7 +148,6 @@
                 android:textSize="14sp" />
 
             <RadioButton
-                android:id="@+id/female"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_marginVertical="0dp"
